[gd_scene load_steps=11 format=3 uid="uid://bwsmv7qyj0545"]

[ext_resource type="Script" path="res://src/scene/level/level.gd" id="1_t1sgn"]
[ext_resource type="PackedScene" uid="uid://rhb1a4subqkb" path="res://src/card/CardSlot.tscn" id="2_32s0a"]
[ext_resource type="PackedScene" uid="uid://45kgratefjga" path="res://src/scene/LevelBackground.tscn" id="2_bd04u"]
[ext_resource type="PackedScene" uid="uid://csa6mt0c5l2pw" path="res://src/card/Card.tscn" id="3_prcam"]
[ext_resource type="PackedScene" uid="uid://b7o15pcamy62d" path="res://src/scene/GameUI.tscn" id="4_1x87l"]
[ext_resource type="Resource" uid="uid://21dncqujx6fh" path="res://src/card/data/uno/uno_red_1.tres" id="7_grfni"]
[ext_resource type="Resource" uid="uid://c6dp4cnghymru" path="res://src/card/data/uno/uno_blue_7.tres" id="8_v2mqf"]
[ext_resource type="PackedScene" uid="uid://cg4y6uj4nehtj" path="res://src/scene/MainCamera.tscn" id="9_cry0b"]
[ext_resource type="Resource" uid="uid://bn6u5iv73rjj8" path="res://src/card/data/uno/uno_red_3.tres" id="10_cs1g8"]
[ext_resource type="Resource" uid="uid://081v44qce37q" path="res://src/card/data/uno/uno_blue_3.tres" id="10_fdylu"]

[node name="Level1" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t1sgn")
level_description = "~Put cards with the same color or the same number next to each other~
~Check the Setting menu if you want some accessibility options~
(*^â€¿^*)"

[node name="LevelBackground" parent="." instance=ExtResource("2_bd04u")]
layout_mode = 1

[node name="TableCardHolder" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -283.0
offset_top = -98.5
offset_right = 283.0
offset_bottom = 81.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="CardSlot" parent="TableCardHolder" instance=ExtResource("2_32s0a")]
layout_mode = 2

[node name="Card" parent="TableCardHolder/CardSlot" instance=ExtResource("3_prcam")]
layout_mode = 2
offset_left = 2.5
offset_top = 2.5
offset_right = 112.5
offset_bottom = 177.5
data = ExtResource("7_grfni")
locked = true

[node name="CardSlot2" parent="TableCardHolder" instance=ExtResource("2_32s0a")]
layout_mode = 2

[node name="CardSlot3" parent="TableCardHolder" instance=ExtResource("2_32s0a")]
layout_mode = 2

[node name="CardSlot4" parent="TableCardHolder" instance=ExtResource("2_32s0a")]
layout_mode = 2

[node name="Card4" parent="TableCardHolder/CardSlot4" instance=ExtResource("3_prcam")]
layout_mode = 2
offset_left = 2.5
offset_top = 2.5
offset_right = 112.5
offset_bottom = 177.5
data = ExtResource("8_v2mqf")
locked = true

[node name="HandCardHolder" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -226.0
offset_top = -84.0
offset_right = 226.0
offset_bottom = 91.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="Card3" parent="HandCardHolder" instance=ExtResource("3_prcam")]
layout_mode = 2
data = ExtResource("10_fdylu")

[node name="Card2" parent="HandCardHolder" instance=ExtResource("3_prcam")]
layout_mode = 2
data = ExtResource("10_cs1g8")

[node name="MainCamera" parent="." instance=ExtResource("9_cry0b")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GameUI" parent="CanvasLayer" node_paths=PackedStringArray("level") instance=ExtResource("4_1x87l")]
level = NodePath("../..")
